@@ -10,6 +10,10 @@
 * .NET (C#) port (#36, #37 Attila Sztupak)
 * Tables parsed and sent by row rather than by table. (Mike Sassak)
 
+== Changed features
+* Switced to ISO 639-1 (language) and ISO 3166 alpha-2 (region - if appliccable). Applies to Catalan,
+  Swedish, Welsh, Romanian and Serbian. (Aslak Hellesøy)
+
 == 1.0.2 (2009-12-30)
 
 == Bugfixes
